# typer-demo-flisol2022

./: README.md  pyproject.toml
.github/workflows/: cicd.yml
rick_portal_gun/: main.py
tests/: test_main.py
