[tool.poetry]
name = "rick_portal_gun"
version = "0.1.0"
description = "Demo para flisol 2022"
authors = ["Alex Pineda <ale.hpineda@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
rick-portal-gun = "rick_portal_gun.main:app"

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.4.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pytest = "^7.1.2"
pylint = "^2.13.7"
pytest-cov = "^3.0.0"
pytest-html = "^3.1.1"
pytest-sugar = "^0.9.4"
pytest-json-report = "^1.5.0"
flake8-html = "^0.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
